crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__dangling_trace_expect_standalone.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
assertion_line: 223
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain : unit\nmain = trace \"foo\" (assert True)\n"
---
--- unoptimized Core
let message#6 : string = "foo" in
let message#7 : string = "assertion failed" in
let fromBool#2 : bool -> bool = \value#4 : bool -> value#4 in
let fromString#3 : string -> string = \value#5 : string -> value#5 in
let main#1 : unit = trace (fromString#3 message#6) in case@Bool fromBool#2 true of
  True -> ()
  False -> trace message#7 in error in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_6
    [(lam message_7
      [(lam fromBool_2
        [(lam fromString_3
          [(lam main_1 main_1)
            (force
              [[(force (builtin trace)) [fromString_3 message_6]]
                (delay
                  (case
                    [fromBool_2 (con bool True)]
                    (force [[(force (builtin trace)) message_7] (delay (error))])
                    (con unit ())))])])
          (lam value_5 value_5)])
        (lam value_4 value_4)])
      (con string "assertion failed")])
    (con string "foo")])
--- optimized Core
trace "foo" in case@Bool true of
  True -> ()
  False -> trace "assertion failed" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force
      [[builtin_1 (con string "foo")]
        (delay
          (case
            (con bool True)
            (force [[builtin_1 (con string "assertion failed")] (delay (error))])
            (con unit ())))]))
    (force (builtin trace))])
--- result
(con unit ())
--- logs
["foo"]
--- budget
cpu: 555598, memory: 3232
