crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__data_map_rejects_malformed_value.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
assertion_line: 380
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Data exposing (validate)\ndecoded : Map Bytes (List Int)\ndecoded = validate (Map [mkPairData (B #\"aa\") (List [B #\"bb\"])])\nmain = nullList (unMapData decoded)\n"
---
--- core
let applyForward#11 : 'erased -> ('erased -> 'erased) -> 'erased = \x#16 : 'erased (f#17 : 'erased -> 'erased) -> f#17 x#16 in
let mapList#12 : ('erased -> pair Data Data) -> list 'erased -> list (pair Data Data) = \(f#18 : 'erased -> pair Data Data) values#19 : list 'erased -> (\self#54 : @self (list 'erased -> list (pair Data Data)) -> self#54 self#54) (\self#54 : @self (list 'erased -> list (pair Data Data)) values#19 : list 'erased -> let match#22 : list 'erased = values#19 in
case@List match#22 of
  Nil -> (con (list (pair data data)) [])
  Cons field#23 field#24 -> let first#20 : 'erased = field#23 in
  let rest#21 : list 'erased = field#24 in
  mkCons (f#18 first#20) (self#54 self#54 rest#21)) values#19 in
let validate#28 : Data -> Bytes = \value#33 : Data -> let candidate#34 : Bytes = (\coerce#36 : Data -> coerce#36) value#33 in
let destruct#35 : bytes = unBData candidate#34 in
candidate#34 in
let mapList#39 : ('erased -> Data) -> list 'erased -> list Data = \(f#42 : 'erased -> Data) values#43 : list 'erased -> (\self#53 : @self (list 'erased -> list Data) -> self#53 self#53) (\self#53 : @self (list 'erased -> list Data) values#43 : list 'erased -> let match#46 : list 'erased = values#43 in
case@List match#46 of
  Nil -> (con (list data) [])
  Cons field#47 field#48 -> let first#44 : 'erased = field#47 in
  let rest#45 : list 'erased = field#48 in
  mkCons (f#42 first#44) (self#53 self#53 rest#45)) values#43 in
let validate#40 : Data -> Int = \value#49 : Data -> let candidate#50 : Int = (\coerce#52 : Data -> coerce#52) value#49 in
let destruct#51 : int = unIData candidate#50 in
candidate#50 in
let validate#29 : Data -> List Data = \value#37 : Data -> let candidate#38 : List Data = (\coerce#41 : Data -> coerce#41) value#37 in
applyForward#11 (applyForward#11 (applyForward#11 candidate#38 unListData) (mapList#39 validate#40)) listData in
let pairValidate#13 : pair Data Data -> pair Data Data = \arg#25 : pair Data Data -> let match#30 : pair Data Data = arg#25 in
case@Pair match#30 of
  Pair field#31 field#32 -> let key#26 : Data = field#31 in
  let value#27 : Data = field#32 in
  mkPairData (validate#28 key#26) (validate#29 value#27) in
let validate#3 : Data -> Map Data Data = \value#9 : Data -> let candidate#10 : Map Data Data = (\coerce#14 : Data -> coerce#14) value#9 in
applyForward#11 (applyForward#11 (applyForward#11 candidate#10 unMapData) (mapList#12 pairValidate#13)) mapData in
let fromBytes#6 : bytes -> bytes = \value#15 : bytes -> value#15 in
let decoded#2 : Map Bytes (List Int) = validate#3 ((\field#4 : list (pair Data Data) -> mapData field#4) (mkCons (mkPairData ((\field#5 : bytes -> bData field#5) (fromBytes#6 (con bytestring #aa))) ((\field#7 : list Data -> listData field#7) (mkCons ((\field#8 : bytes -> bData field#8) (fromBytes#6 (con bytestring #bb))) (con (list data) [])))) (con (list (pair data data)) []))) in
let main#1 : bool = nullList (unMapData decoded#2) in
main#1
--- uplc
(program 1.1.0
  [(lam applyForward_11
    [(lam mapList_12
      [(lam validate_28
        [(lam mapList_39
          [(lam validate_40
            [(lam validate_29
              [(lam pairValidate_13
                [(lam validate_3
                  [(lam fromBytes_6
                    [(lam decoded_2
                      [(lam main_1 main_1)
                        [(force (builtin nullList)) [(builtin unMapData) decoded_2]]])
                      [validate_3
                        [(lam field_4 [(builtin mapData) field_4])
                          [[(force (builtin mkCons))
                            [[(builtin mkPairData)
                              [(lam field_5 [(builtin bData) field_5]) [fromBytes_6 (con bytestring #aa)]]]
                              [(lam field_7 [(builtin listData) field_7])
                                [[(force (builtin mkCons))
                                  [(lam field_8 [(builtin bData) field_8]) [fromBytes_6 (con bytestring #bb)]]]
                                  (con (list data) [])]]]]
                            (con (list (pair data data)) [])]]]])
                    (lam value_15 value_15)])
                  (lam value_9
                    [(lam candidate_10
                      [[applyForward_11
                        [[applyForward_11 [[applyForward_11 candidate_10] (builtin unMapData)]]
                          [mapList_12 pairValidate_13]]]
                        (builtin mapData)])
                      [(lam coerce_14 coerce_14) value_9]])])
                (lam arg_25
                  [(lam match_30
                    (case
                      match_30
                      (lam field_31
                        (lam field_32
                          [(lam key_26
                            [(lam value_27
                              [[(builtin mkPairData) [validate_28 key_26]] [validate_29 value_27]])
                              field_32])
                            field_31]))))
                    arg_25])])
              (lam value_37
                [(lam candidate_38
                  [[applyForward_11
                    [[applyForward_11 [[applyForward_11 candidate_38] (builtin unListData)]]
                      [mapList_39 validate_40]]]
                    (builtin listData)])
                  [(lam coerce_41 coerce_41) value_37]])])
            (lam value_49
              [(lam candidate_50
                [(lam destruct_51 candidate_50) [(builtin unIData) candidate_50]])
                [(lam coerce_52 coerce_52) value_49]])])
          (lam f_42
            (lam values_43
              [[(lam self_53 [self_53 self_53])
                (lam self_53
                  (lam values_43
                    [(lam match_46
                      (case
                        match_46
                        (lam field_47
                          (lam field_48
                            [(lam first_44
                              [(lam rest_45
                                [[(force (builtin mkCons)) [f_42 first_44]] [[self_53 self_53] rest_45]])
                                field_48])
                              field_47]))
                        (con (list data) [])))
                      values_43]))]
                values_43]))])
        (lam value_33
          [(lam candidate_34
            [(lam destruct_35 candidate_34) [(builtin unBData) candidate_34]])
            [(lam coerce_36 coerce_36) value_33]])])
      (lam f_18
        (lam values_19
          [[(lam self_54 [self_54 self_54])
            (lam self_54
              (lam values_19
                [(lam match_22
                  (case
                    match_22
                    (lam field_23
                      (lam field_24
                        [(lam first_20
                          [(lam rest_21
                            [[(force (builtin mkCons)) [f_18 first_20]] [[self_54 self_54] rest_21]])
                            field_24])
                          field_23]))
                    (con (list (pair data data)) [])))
                  values_19]))]
            values_19]))])
    (lam x_16 (lam f_17 [f_17 x_16]))])
--- result
error: Runtime(MalFormedData(ByteString([187])))
--- logs
[]
--- budget
cpu: 3551532, memory: 20420
